src/objects/UPT_Budget_Country_Data__c.object
<CustomObject>
    <description>Stores the available countries for our billing rates to be stored in. Allows for attributes, like region and customer friendly title to stores centrally and updated as needed</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country Code.</description>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Country Name.</description>
        <label>Country Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Default_Region__c</fullName>
        <description>Name of the region.</description>
        <label>Default Region</label>
        <type>TextArea</type>
    </fields>
    <label>UPT Budget Country Data</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>UPT Budget Country Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UPT Budget Country Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>